--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2095,7 +2095,7 @@
 
 	#intro {
 		background: url("https://vignette.wikia.nocookie.net/epicrapbattlesofhistory/images/6/66/Tiger_Black_Background.png/revision/latest?cb=20141221230407"), url(https://s23.postimg.cc/c375nnsjf/hands_music_musician_piano.jpg);
-		background-size: 100%, cover;
+		background-size: 100%;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
 		background-repeat: repeat, no-repeat;
